sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:9: error: not found: value i
			if (plusPetit(i+1,i)) {
                                      ^AlgBubbleSort1:10: error: not found: value i
			echange(i+1,i)
                                ^