sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {

	var a=getNombreValeurs()
	
	for (j<-0 to a) {
		
				
			if (plusPetit(i+1,i)) {
			echange(i+1,i)
		}
	
}
}